[gd_scene load_steps=5 format=2]

[ext_resource path="res://Assets/Enemy Sprite/01/1.png" type="Texture" id=1]
[ext_resource path="res://Enemies/BaseEnemies.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 19, 34 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 1021.5, 250.5 )

[node name="BaseEnemy" type="KinematicBody2D" groups=["enemy"]]
collision_layer = 2
collision_mask = 4
script = ExtResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 9, -4 )
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="AttackArea" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="AttackArea"]
position = Vector2( -677, -30.5 )
shape = SubResource( 2 )

[node name="AttackTimer" type="Timer" parent="."]
wait_time = 0.7
one_shot = true

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( -44, -4 )

[connection signal="body_entered" from="AttackArea" to="." method="_on_Area2D_body_entered"]
[connection signal="timeout" from="AttackTimer" to="." method="_on_AttackTimer_timeout"]
